--- a/lang/rust/Makefile
+++ b/lang/rust/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	rust
-PORTVERSION?=	1.70.0
+PORTVERSION?=	1.87.0
 PORTREVISION?=	0
 CATEGORIES=	lang
 MASTER_SITES=	https://static.rust-lang.org/dist/:src \
@@ -22,9 +22,13 @@ LICENSE_COMB=	dual
 LICENSE_FILE_apache2=	${WRKSRC}/LICENSE-APACHE
 LICENSE_FILE_mit=	${WRKSRC}/LICENSE-MIT
 
-BROKEN_MidnightBSD_2.1=		requires 3.x
-BROKEN_MidnightBSD_2.2=		requires 3.x
-BROKEN_MidnightBSD_4.0=		requires 3.x use rust186 port
+BROKEN_MidnightBSD_3.0=	Requires 4.0+
+BROKEN_MidnightBSD_3.1=	Requires 4.0+
+BROKEN_MidnightBSD_3.2=	Requires 4.0+
+
+ONLY_FOR_ARCHS?=	aarch64 amd64 armv7 i386 powerpc64 powerpc64le powerpc \
+			riscv64
+ONLY_FOR_ARCHS_REASON?=	requires prebuilt bootstrap compiler
 
 FAKE_OPTS=    trueprefix
 NO_TEST=      yes
@@ -32,7 +36,7 @@ NO_TEST=      yes
 BUILD_DEPENDS=	cmake:devel/cmake-core
 LIB_DEPENDS=	libcurl.so:ftp/curl
 
-USES=		cpe ninja:build pkgconfig python:build shebangfix ssl tar:xz
+USES=		cmake:indirect cpe ninja:build pkgconfig python:build ssl tar:xz
 
 CPE_VENDOR=	rust-lang
 
@@ -50,30 +54,33 @@ CONFLICTS_INSTALL?=	rust-nightly
 # ?= to allow users to still overwrite it in make.conf.
 TMPDIR?=	${WRKDIR}
 
-OPTIONS_DEFINE=		DOCS GDB SOURCES WASM
-OPTIONS_DEFAULT=	SOURCES WASM
-.if !defined(NIGHTLY_DATE)
-OPTIONS_EXCLUDE=	DOCS # https://github.com/rust-lang/rust/issues/76526
-.endif
+OPTIONS_DEFINE=		DOCS GDB LTO PORT_LLVM SOURCES WASM
+OPTIONS_DEFAULT=	DOCS SOURCES WASM
+OPTIONS_DEFINE_i386=	SSE2
+OPTIONS_DEFAULT_i386=	SSE2
 
 GDB_DESC=	Install ports gdb (necessary for debugging rust programs)
+PORT_LLVM_DESC=	Build against devel/llvm instead of bundled copy (experimental)
+SSE2_DESC=	Enable SSE2 instructions
 SOURCES_DESC=	Install source files
 WASM_DESC=	Build the WebAssembly target (wasm32-unknown-unknown)
 
-DOCS_VARS=		_RUST_BUILD_DOCS=true
+SSE2_EXTRA_PATCHES_OFF+=	${FILESDIR}/extra-patch-compiler_rustc__target_src_spec_targets_i686__unknown__freebsd.rs
+
+DOCS_VARS=		_RUST_BUILD_DOCS=true \
+			_COMPONENTS+="rust-docs-${_PACKAGE_VERS}-${_RUST_TARGET} rust-docs-json-${_PACKAGE_VERS}-${_RUST_TARGET}"
 DOCS_VARS_OFF=		_RUST_BUILD_DOCS=false
 GDB_RUN_DEPENDS=	${LOCALBASE}/bin/gdb:devel/gdb
+PORT_LLVM_USES=		llvm:min=18,lib,noexport
+PORT_LLVM_MAKE_ENV=	RUSTFLAGS="-Lnative=${LOCALBASE}/lib"
 SOURCES_VARS=		_COMPONENTS+=rust-src-${_PACKAGE_VERS} \
 			_RUST_TOOLS+=src
 WASM_VARS=		_COMPONENTS+="rust-analysis-${_PACKAGE_VERS}-wasm32-unknown-unknown rust-std-${_PACKAGE_VERS}-wasm32-unknown-unknown" \
-			_RUST_BUILD_WASM=true \
 			_RUST_TARGETS+=wasm32-unknown-unknown
-WASM_VARS_OFF=		_RUST_BUILD_WASM=false
 
-# See WRKSRC/src/stage0.json for the date and version values
-BOOTSTRAPS_DATE?=		2023-04-20
-RUST_BOOTSTRAP_VERSION?=	1.69.0
-
+# See WRKSRC/src/stage0 for the date and version values
+BOOTSTRAPS_DATE?=		2025-04-03
+RUST_BOOTSTRAP_VERSION?=	1.86.0
 
 CARGO_VENDOR_DIR?=		${WRKSRC}/vendor
 
@@ -83,7 +90,7 @@ _RUST_ARCH_i386=	i686
 _RUST_ARCH_riscv64=	riscv64gc
 _RUST_TARGET=		${_RUST_ARCH_${ARCH}:U${ARCH}}-unknown-freebsd
 _RUST_TARGETS=		${_RUST_TARGET}
-_RUST_TOOLS=		analysis cargo clippy rustfmt
+_RUST_TOOLS=		analysis cargo clippy rust-analyzer rustdoc rustfmt
 
 _RUSTC_BOOTSTRAP=	${BOOTSTRAPS_DATE_${ARCH}:U${BOOTSTRAPS_DATE}}/rustc-${RUST_BOOTSTRAP_VERSION_${ARCH}:U${RUST_BOOTSTRAP_VERSION}}-${_RUST_TARGET}
 _RUST_STD_BOOTSTRAP=	${BOOTSTRAPS_DATE_${ARCH}:U${BOOTSTRAPS_DATE}}/rust-std-${RUST_BOOTSTRAP_VERSION_${ARCH}:U${RUST_BOOTSTRAP_VERSION}}-${_RUST_TARGET}
@@ -97,21 +104,19 @@ _COMPONENTS+=		cargo-${_PACKAGE_VERS}-${_RUST_TARGET} \
 			rust-analysis-${_PACKAGE_VERS}-${_RUST_TARGET} \
 			rust-std-${_PACKAGE_VERS}-${_RUST_TARGET}
 
-# https://github.com/bjorn3/rustc_codegen_cranelift/commit/83d470d91c15d0cb5890705291e6ee9e5be8a842
-# https://github.com/rust-lang/rustc_codegen_gcc/pull/160
-SHEBANG_FILES=		compiler/rustc_codegen_cranelift/scripts/* \
-			compiler/rustc_codegen_gcc/*.sh compiler/rustc_codegen_gcc/build_sysroot/*.sh
-
 .include <bsd.port.pre.mk>
 
-MAKE_ENV+=	RUST_BACKTRACE=1
+.if ${OSVERSION} <= 400000
+IGNORE=	only for 4.x and higher
+.endif
 
 # rls doesn't build on rust nightly
-# rls needs 64-bit atomics: it doesn't build on powerpc
 .if !defined(NIGHTLY_DATE)
 _RUST_TOOLS+=	rls
 _COMPONENTS+=	rls-${_PACKAGE_VERS}-${_RUST_TARGET}
 .endif
+
+MAKE_ENV+=	RUST_BACKTRACE=1
 
 # per https://rust-lang.github.io/rustup/concepts/components.html
 # rustc-dev is only usefull on nightly
@@ -119,16 +124,12 @@ _COMPONENTS+=	rls-${_PACKAGE_VERS}-${_RUST_TARGET}
 _COMPONENTS+=	rustc-dev-${_PACKAGE_VERS}-${_RUST_TARGET}
 .endif
 
-# If the kernel does not return sane kern.proc.pathname values
-# for hardlinks then disable hardlinks in the build to avoid
-# intermittent "can't find crate for `std`" build failures,
-# c.f. PR248184
-#
-# XXX: Avoiding OSVERSION since it is derived from userland but
-# the running kernel might still be newer with sane behavior
-# anyway...
-.if exists(${PATCHDIR}/no-hardlinks)
-EXTRA_PATCHES+=		${PATCHDIR}/no-hardlinks
+.if ${PORT_OPTIONS:MWASM} && ${PORT_OPTIONS:MDOCS}
+_COMPONENTS+=	rust-docs-${_PACKAGE_VERS}-wasm32-unknown-unknown rust-docs-json-${_PACKAGE_VERS}-wasm32-unknown-unknown
+.endif
+
+.if exists(${PATCHDIR}/${ARCH}${BOOTSTRAPS_SUFFIX})
+EXTRA_PATCHES+=	${PATCHDIR}/${ARCH}${BOOTSTRAPS_SUFFIX}
 .endif
 
 .ifdef QEMU_EMULATING
@@ -143,21 +144,25 @@ DISTFILES:=	${DISTFILES:M*\:src} \
 post-patch:
 	@${REINPLACE_CMD} 's,gdb,${LOCALBASE}/bin/gdb,' ${WRKSRC}/src/etc/rust-gdb
 .if defined(NIGHTLY_DATE)
-	@${REINPLACE_CMD} 's/"rustfmt"/"nothx"/' ${WRKSRC}/src/stage0.json
+	@${REINPLACE_CMD} 's/rustfmt/nothx/' ${WRKSRC}/src/stage0
 .endif
 # Disable vendor checksums
 	@${REINPLACE_CMD} 's,"files":{[^}]*},"files":{},' \
 		${CARGO_VENDOR_DIR}/*/.cargo-checksum.json
 
+post-patch-PORT_LLVM-on:
+# WASM target hardcodes bundled lld
+	@${REINPLACE_CMD} 's|"rust-lld"|"wasm-ld${LLVM_VERSION}"|' \
+		${WRKSRC}/compiler/rustc_target/src/spec/base/wasm.rs
+
 do-configure:
 # Check that the running kernel has COMPAT_FREEBSD11 required by lang/rust post-ino64
-	@${SETENV} CC="${CC}" OPSYS="FreeBSD" OSVERSION="1204000" WRKDIR="${WRKDIR}" \
+	@${SETENV} CC="${CC}" OPSYS="FreeBSD" OSVERSION="1304000" WRKDIR="${WRKDIR}" \
 		${SH} ${SCRIPTSDIR}/rust-compat11-canary.sh
 .for _component in cargo rust-std rustc
 	@cd ${WRKDIR}/${_component}-*-freebsd && \
 		${SH} install.sh --prefix=${WRKDIR}/bootstrap --verbose
 .endfor
-	@${ECHO_CMD} 'changelog-seen=2' > ${WRKSRC}/config.toml
 	@${ECHO_CMD} '[build]' >> ${WRKSRC}/config.toml
 	@${ECHO_CMD} 'build-dir="${WRKDIR}/_build"' >> ${WRKSRC}/config.toml
 	@${ECHO_CMD} 'build-stage=2' >> ${WRKSRC}/config.toml
@@ -183,8 +188,21 @@ do-configure:
 	@${ECHO_CMD} 'default-linker="${CC}"' >> ${WRKSRC}/config.toml
 	@${ECHO_CMD} 'deny-warnings=false' >> ${WRKSRC}/config.toml
 	@${ECHO_CMD} 'verbose-tests=true' >> ${WRKSRC}/config.toml
-	@${ECHO_CMD} 'lld=${_RUST_BUILD_WASM}' >> ${WRKSRC}/config.toml
+	@${ECHO_CMD} 'download-rustc=false' >> ${WRKSRC}/config.toml
+.if ${PORT_OPTIONS:MWASM} && !${PORT_OPTIONS:MPORT_LLVM}
+	@${ECHO_CMD} 'lld=true' >> ${WRKSRC}/config.toml
+.else
+	@${ECHO_CMD} 'lld=false' >> ${WRKSRC}/config.toml
+.endif
+.if ${PORT_OPTIONS:MLTO}
+	@${ECHO_CMD} 'lto="thin"' >> ${WRKSRC}/config.toml
+.endif
+	@${ECHO_CMD} 'remap-debuginfo=true' >> ${WRKSRC}/config.toml
 	@${ECHO_CMD} '[llvm]' >> ${WRKSRC}/config.toml
+	@${ECHO_CMD} 'download-ci-llvm = false' >> ${WRKSRC}/config.toml
+.if ${PORT_OPTIONS:MLTO}
+	@${ECHO_CMD} 'thin-lto=true' >> ${WRKSRC}/config.toml
+.endif
 .if defined(WITH_CCACHE_BUILD) && !defined(NO_CCACHE)
 	@${ECHO_CMD} 'ccache="${CCACHE_BIN}"' >> ${WRKSRC}/config.toml
 .else
@@ -194,16 +212,20 @@ do-configure:
 .for _target in ${_RUST_TARGETS}
 	@${ECHO_CMD} '[target.${_target}]' >> ${WRKSRC}/config.toml
 	@${ECHO_CMD} 'ar="${AR}"' >> ${WRKSRC}/config.toml
+.if ${ARCH} == powerpc
+	@${ECHO_CMD} 'cc="${WRKDIR}/cc-wrapper"' >> ${WRKSRC}/config.toml
+	@${ECHO_CMD} 'cxx="${WRKDIR}/cxx-wrapper"' >> ${WRKSRC}/config.toml
+.else
 	@${ECHO_CMD} 'cc="${CC}"' >> ${WRKSRC}/config.toml
 	@${ECHO_CMD} 'cxx="${CXX}"' >> ${WRKSRC}/config.toml
+.endif
 	@${ECHO_CMD} 'linker="${CC}"' >> ${WRKSRC}/config.toml
+.if ${PORT_OPTIONS:MPORT_LLVM}
+	@${ECHO_CMD} 'llvm-config="${LOCALBASE}/bin/${LLVM_CONFIG}"' >> ${WRKSRC}/config.toml
+.endif
 .endfor
 	@${ECHO_CMD} '[dist]' >> ${WRKSRC}/config.toml
 	@${ECHO_CMD} 'src-tarball=false' >> ${WRKSRC}/config.toml
-.if defined(NIGHTLY_DATE)
-# Don't abort if optional tools fail to build
-	@${ECHO_CMD} 'missing-tools=true' >> ${WRKSRC}/config.toml
-.endif
 
 do-build:
 	@cd ${WRKSRC} && \
@@ -211,23 +233,24 @@ do-build:
 
 do-install:
 	@cd ${WRKSRC} && \
-                ${SETENV} ${MAKE_ENV} DESTDIR=${FAKE_DESTDIR} ${PYTHON_CMD} x.py install --jobs=${MAKE_JOBS_NUMBER}
+		${SETENV} ${MAKE_ENV} DESTDIR=${FAKE_DESTDIR} ${PYTHON_CMD} x.py install --jobs=${MAKE_JOBS_NUMBER}
+
 # We autogenerate the plist file.  We do that, instead of the
 # regular pkg-plist, because several libraries have a computed
 # filename based on the absolute path of the source files.  As it
 # is user-specific, we cannot know their filename in advance.
-	-${RM} -r ${DOCSDIR}/*.old \
-                ${DOCSDIR}/html/.lock \
-                ${DOCSDIR}/html/.stamp \
-                ${PREFIX}/lib/rustlib/install.log \
-                ${PREFIX}/lib/rustlib/manifest-* \
-                ${PREFIX}/lib/rustlib/uninstall.sh
-	@${FIND} ${PREFIX}/bin ${PREFIX}/lib \
-                ${PREFIX}/libexec -exec ${FILE} -i {} + | \
-                ${AWK} -F: '/executable|sharedlib/ { print $$1 }' | ${XARGS} ${STRIP_CMD}
-	@${FIND} ${PREFIX} -not -type d | \
-                ${SED} -E -e 's,^${FAKE_DESTDIR}${TRUE_PREFIX}/,,' \
-                        -e 's,(share/man/man[1-9]/.*\.[0-9]),\1.gz,' >> ${TMPPLIST}
+	@${RM}	${STAGEDIR}${DOCSDIR}/*.old \
+		${STAGEDIR}${PREFIX}/lib/rustlib/components \
+		${STAGEDIR}${PREFIX}/lib/rustlib/install.log \
+		${STAGEDIR}${PREFIX}/lib/rustlib/manifest-* \
+		${STAGEDIR}${PREFIX}/lib/rustlib/rust-installer-version \
+		${STAGEDIR}${PREFIX}/lib/rustlib/uninstall.sh
+	@${FIND} ${STAGEDIR}${PREFIX}/bin ${STAGEDIR}${PREFIX}/lib \
+		${STAGEDIR}${PREFIX}/libexec -exec ${FILE} -i {} + | \
+		${AWK} -F: '/executable|sharedlib/ { print $$1 }' | ${XARGS} ${STRIP_CMD}
+	@${FIND} ${STAGEDIR}${PREFIX} -not -type d | \
+		${SED} -E -e 's,^${STAGEDIR}${PREFIX}/,,' \
+			-e 's,(share/man/man[1-9]/.*\.[0-9]),\1.gz,' >> ${TMPPLIST}
 
 post-install-DOCS-on:
 # Ignore any left behind empty directories in case some docs fail
@@ -239,5 +262,10 @@ post-install-SOURCES-on:
 # Silence stage-qa warnings by sanitizing permissions on sources
 	@${FIND} ${FAKE_DESTDIR}${PREFIX}/lib/rustlib/src -type f -exec ${CHMOD} \
 		${SHAREMODE} {} +
+
+# Note that make test does not work when rust is already installed.
+do-test:
+	@cd ${WRKSRC} && \
+		${SETENV} ${TEST_ENV} ${PYTHON_CMD} x.py test --jobs=${MAKE_JOBS_NUMBER}
 
 .include <bsd.port.post.mk>
