--- a/security/cargo-audit/Makefile.crates
+++ b/security/cargo-audit/Makefile.crates
@@ -1,396 +1,419 @@
-CARGO_CRATES=	abscissa_core-0.6.0 \
-		abscissa_derive-0.6.0 \
-		addr2line-0.21.0 \
-		adler-1.0.2 \
-		aho-corasick-1.1.2 \
+CARGO_CRATES=	abscissa_core-0.8.2 \
+		abscissa_derive-0.8.2 \
+		addr2line-0.25.1 \
+		adler2-2.0.1 \
+		aho-corasick-1.1.3 \
+		allocator-api2-0.2.21 \
 		android_system_properties-0.1.5 \
-		android-tzdata-0.1.1 \
-		anyhow-1.0.75 \
-		arc-swap-1.6.0 \
-		arrayvec-0.7.4 \
-		askama_derive-0.11.2 \
-		askama_escape-0.10.3 \
-		askama_shared-0.12.2 \
-		askama-0.11.1 \
-		async-compression-0.4.4 \
-		atom_syndication-0.12.2 \
-		atty-0.2.14 \
-		auditable-extract-0.3.2 \
-		auditable-info-0.7.0 \
-		auditable-serde-0.6.0 \
-		autocfg-1.1.0 \
-		backtrace-0.3.69 \
-		base64-0.21.5 \
-		base64-0.5.1 \
+		anstream-0.6.21 \
+		anstyle-1.0.13 \
+		anstyle-parse-0.2.7 \
+		anstyle-query-1.1.4 \
+		anstyle-wincon-3.0.10 \
+		arc-swap-1.7.1 \
+		arrayvec-0.7.6 \
+		askama-0.14.0 \
+		askama_derive-0.14.0 \
+		askama_parser-0.14.0 \
+		async-compression-0.4.32 \
+		atom_syndication-0.12.7 \
+		atomic-waker-1.1.2 \
+		auditable-extract-0.3.5 \
+		auditable-info-0.10.0 \
+		auditable-serde-0.9.0 \
+		autocfg-1.5.0 \
+		backtrace-0.3.76 \
+		base64-0.22.1 \
+		basic-toml-0.1.10 \
 		binfarce-0.2.1 \
-		bitflags-1.3.2 \
-		bitflags-2.4.1 \
+		bitflags-2.10.0 \
 		block-buffer-0.10.4 \
-		bstr-1.7.0 \
-		btoi-0.4.3 \
-		bumpalo-3.14.0 \
-		byteorder-1.3.1 \
+		borsh-1.5.7 \
+		bstr-1.12.0 \
+		bumpalo-3.19.0 \
 		byteorder-1.5.0 \
-		bytes-1.5.0 \
-		byteyarn-0.2.3 \
-		camino-1.1.6 \
+		bytes-1.10.1 \
+		camino-1.2.1 \
 		canonical-path-2.0.2 \
-		cargo_metadata-0.14.2 \
-		cargo-edit-9-0.9.3 \
-		cargo-platform-0.1.4 \
-		cc-1.0.83 \
-		cfg-if-1.0.0 \
-		chrono-0.4.31 \
-		clap_derive-3.2.25 \
-		clap_lex-0.2.4 \
-		clap-3.2.25 \
-		clru-0.6.1 \
-		color-eyre-0.6.2 \
-		combine-4.6.6 \
-		comrak-0.18.0 \
-		concolor-control-0.0.7 \
-		concolor-query-0.0.4 \
-		core-foundation-0.9.3 \
-		core-foundation-sys-0.8.4 \
-		cpufeatures-0.2.10 \
-		crates-index-0.19.13 \
-		crc32fast-1.3.2 \
-		crossbeam-0.8.2 \
-		crossbeam-channel-0.5.8 \
-		crossbeam-deque-0.8.3 \
-		crossbeam-epoch-0.9.15 \
-		crossbeam-queue-0.3.8 \
-		crossbeam-utils-0.8.16 \
+		caseless-0.2.2 \
+		cc-1.2.43 \
+		cfg-if-1.0.4 \
+		cfg_aliases-0.2.1 \
+		chrono-0.4.42 \
+		clap-4.5.50 \
+		clap_builder-4.5.50 \
+		clap_derive-4.5.49 \
+		clap_lex-0.7.6 \
+		clru-0.6.2 \
+		color-eyre-0.6.5 \
+		colorchoice-1.0.4 \
+		compression-codecs-0.4.31 \
+		compression-core-0.4.29 \
+		comrak-0.47.0 \
+		core-foundation-0.9.4 \
+		core-foundation-0.10.1 \
+		core-foundation-sys-0.8.7 \
+		cpufeatures-0.2.17 \
+		crc32fast-1.5.0 \
+		crossbeam-channel-0.5.15 \
+		crossbeam-deque-0.8.6 \
+		crossbeam-epoch-0.9.18 \
+		crossbeam-utils-0.8.21 \
 		crypto-common-0.1.6 \
-		darling_core-0.14.4 \
-		darling_macro-0.14.4 \
-		darling-0.14.4 \
-		deranged-0.3.9 \
-		derive_builder_core-0.12.0 \
-		derive_builder_macro-0.12.0 \
-		derive_builder-0.12.0 \
-		deunicode-0.4.5 \
-		deunicode-1.4.1 \
+		curl-0.4.49 \
+		curl-sys-0.4.83+curl-8.15.0 \
+		darling-0.20.11 \
+		darling_core-0.20.11 \
+		darling_macro-0.20.11 \
+		deranged-0.5.5 \
+		derive_builder-0.20.2 \
+		derive_builder_core-0.20.2 \
+		derive_builder_macro-0.20.2 \
 		digest-0.10.7 \
-		diligent-date-parser-0.1.4 \
-		dirs-next-2.0.0 \
-		dirs-sys-next-0.1.2 \
-		dunce-1.0.4 \
-		either-1.9.0 \
-		encoding_rs-0.8.33 \
+		diligent-date-parser-0.1.5 \
+		display-error-chain-0.2.2 \
+		displaydoc-0.2.5 \
+		dunce-1.0.5 \
+		either-1.15.0 \
+		encoding_rs-0.8.35 \
 		entities-1.0.1 \
-		env_proxy-0.4.1 \
-		equivalent-1.0.1 \
-		errno-0.3.5 \
-		eyre-0.6.8 \
-		faster-hex-0.8.1 \
-		fastrand-2.0.1 \
-		filetime-0.2.22 \
-		fixedbitset-0.4.1 \
-		fixedbitset-0.4.2 \
-		flate2-1.0.28 \
+		equivalent-1.0.2 \
+		errno-0.3.14 \
+		eyre-0.6.12 \
+		faster-hex-0.10.0 \
+		fastrand-2.3.0 \
+		filetime-0.2.26 \
+		find-msvc-tools-0.1.4 \
+		fixedbitset-0.5.7 \
+		flate2-1.1.5 \
 		fnv-1.0.7 \
-		foreign-types-0.3.2 \
-		foreign-types-shared-0.1.1 \
-		form_urlencoded-1.0.1 \
-		form_urlencoded-1.2.0 \
-		fs-err-2.9.0 \
-		futures-channel-0.3.29 \
-		futures-core-0.3.29 \
-		futures-io-0.3.29 \
-		futures-sink-0.3.29 \
-		futures-task-0.3.29 \
-		futures-util-0.3.29 \
-		generic-array-0.14.7 \
-		getrandom-0.2.10 \
-		gimli-0.28.0 \
-		git2-0.16.1 \
-		gix-0.54.1 \
-		gix-actor-0.27.0 \
-		gix-attributes-0.19.0 \
-		gix-bitmap-0.2.7 \
-		gix-chunk-0.4.4 \
-		gix-command-0.2.10 \
-		gix-commitgraph-0.21.0 \
-		gix-config-0.30.0 \
-		gix-config-value-0.14.0 \
-		gix-credentials-0.20.0 \
-		gix-date-0.8.0 \
-		gix-diff-0.36.0 \
-		gix-discover-0.25.0 \
-		gix-features-0.35.0 \
-		gix-filter-0.5.0 \
-		gix-fs-0.7.0 \
-		gix-glob-0.13.0 \
-		gix-hash-0.13.1 \
-		gix-hashtable-0.4.0 \
-		gix-ignore-0.8.0 \
-		gix-index-0.25.0 \
-		gix-lock-10.0.0 \
-		gix-macros-0.1.0 \
-		gix-negotiate-0.8.0 \
-		gix-object-0.37.0 \
-		gix-odb-0.53.0 \
-		gix-pack-0.43.0 \
-		gix-packetline-0.16.7 \
-		gix-packetline-blocking-0.16.6 \
-		gix-path-0.10.0 \
-		gix-pathspec-0.3.0 \
-		gix-prompt-0.7.0 \
-		gix-protocol-0.40.0 \
-		gix-quote-0.4.7 \
-		gix-ref-0.37.0 \
-		gix-refspec-0.18.0 \
-		gix-revision-0.22.0 \
-		gix-revwalk-0.8.0 \
-		gix-sec-0.10.0 \
-		gix-submodule-0.4.0 \
-		gix-tempfile-10.0.0 \
-		gix-trace-0.1.3 \
-		gix-transport-0.37.0 \
-		gix-traverse-0.33.0 \
-		gix-url-0.24.0 \
-		gix-utils-0.1.5 \
-		gix-validate-0.8.0 \
-		gix-worktree-0.26.0 \
-		gix-worktree-state-0.3.0 \
-		gumdrop_derive-0.8.1 \
+		foldhash-0.1.5 \
+		foldhash-0.2.0 \
+		form_urlencoded-1.2.2 \
+		fs-err-2.11.0 \
+		fs-err-3.1.3 \
+		futures-channel-0.3.31 \
+		futures-core-0.3.31 \
+		futures-io-0.3.31 \
+		futures-sink-0.3.31 \
+		futures-task-0.3.31 \
+		futures-util-0.3.31 \
+		generic-array-0.14.9 \
+		getrandom-0.2.16 \
+		getrandom-0.3.4 \
+		gimli-0.32.3 \
+		gix-0.74.1 \
+		gix-actor-0.35.6 \
+		gix-attributes-0.28.1 \
+		gix-bitmap-0.2.15 \
+		gix-chunk-0.4.12 \
+		gix-command-0.6.3 \
+		gix-commitgraph-0.30.1 \
+		gix-config-0.47.1 \
+		gix-config-value-0.15.3 \
+		gix-credentials-0.31.1 \
+		gix-date-0.10.7 \
+		gix-diff-0.54.1 \
+		gix-discover-0.42.0 \
+		gix-features-0.44.1 \
+		gix-filter-0.21.0 \
+		gix-fs-0.17.0 \
+		gix-glob-0.22.1 \
+		gix-hash-0.20.1 \
+		gix-hashtable-0.10.0 \
+		gix-ignore-0.17.1 \
+		gix-index-0.42.1 \
+		gix-lock-19.0.0 \
+		gix-negotiate-0.22.0 \
+		gix-object-0.51.1 \
+		gix-odb-0.71.1 \
+		gix-pack-0.61.1 \
+		gix-packetline-0.19.3 \
+		gix-packetline-blocking-0.19.3 \
+		gix-path-0.10.21 \
+		gix-pathspec-0.13.0 \
+		gix-prompt-0.11.2 \
+		gix-protocol-0.52.1 \
+		gix-quote-0.6.1 \
+		gix-ref-0.54.1 \
+		gix-refspec-0.32.0 \
+		gix-revision-0.36.1 \
+		gix-revwalk-0.22.0 \
+		gix-sec-0.12.2 \
+		gix-shallow-0.6.0 \
+		gix-submodule-0.21.0 \
+		gix-tempfile-19.0.1 \
+		gix-trace-0.1.15 \
+		gix-transport-0.49.1 \
+		gix-traverse-0.48.0 \
+		gix-url-0.33.1 \
+		gix-utils-0.3.1 \
+		gix-validate-0.10.1 \
+		gix-worktree-0.43.1 \
+		gix-worktree-state-0.21.0 \
 		gumdrop-0.8.1 \
-		h2-0.3.21 \
-		hashbrown-0.11.2 \
-		hashbrown-0.12.3 \
-		hashbrown-0.14.2 \
-		heck-0.4.1 \
-		hermit-abi-0.1.19 \
-		hermit-abi-0.3.3 \
-		hex-0.4.3 \
-		home-0.5.5 \
-		http-0.2.9 \
-		http-body-0.4.5 \
-		httparse-1.8.0 \
-		httpdate-1.0.3 \
-		humansize-1.1.1 \
-		hyper-0.14.27 \
-		hyper-rustls-0.24.2 \
-		iana-time-zone-0.1.58 \
+		gumdrop_derive-0.8.1 \
+		h2-0.4.12 \
+		hash32-0.3.1 \
+		hashbrown-0.15.5 \
+		hashbrown-0.16.0 \
+		heapless-0.8.0 \
+		heck-0.5.0 \
+		home-0.5.11 \
+		http-1.3.1 \
+		http-body-1.0.1 \
+		http-body-util-0.1.3 \
+		httparse-1.10.1 \
+		hyper-1.7.0 \
+		hyper-rustls-0.27.7 \
+		hyper-util-0.1.17 \
+		iana-time-zone-0.1.64 \
 		iana-time-zone-haiku-0.1.2 \
+		icu_collections-2.0.0 \
+		icu_locale_core-2.0.0 \
+		icu_normalizer-2.0.0 \
+		icu_normalizer_data-2.0.0 \
+		icu_properties-2.0.1 \
+		icu_properties_data-2.0.1 \
+		icu_provider-2.0.0 \
 		ident_case-1.0.1 \
-		idna-0.2.3 \
-		idna-0.4.0 \
-		indenter-0.3.3 \
-		indexmap-1.8.1 \
-		indexmap-1.9.3 \
-		indexmap-2.0.2 \
+		idna-1.1.0 \
+		idna_adapter-1.2.1 \
+		indenter-0.3.4 \
+		indexmap-2.12.0 \
 		io-close-0.3.7 \
-		io-lifetimes-1.0.11 \
-		ipnet-2.9.0 \
-		itertools-0.10.5 \
-		itoa-1.0.9 \
-		jobserver-0.1.27 \
-		js-sys-0.3.64 \
-		jwalk-0.8.1 \
-		kstring-1.0.6 \
-		lazy_static-1.4.0 \
-		libc-0.2.149 \
-		libgit2-sys-0.14.2+1.5.1 \
-		libssh2-sys-0.2.23 \
-		libz-sys-1.1.12 \
-		linux-raw-sys-0.3.8 \
-		linux-raw-sys-0.4.10 \
-		lock_api-0.4.11 \
-		log-0.4.20 \
-		matchers-0.1.0 \
-		matches-0.1.9 \
-		maybe-async-0.2.7 \
-		memchr-2.6.4 \
-		memmap2-0.7.1 \
-		memoffset-0.9.0 \
-		mime_guess-2.0.4 \
+		ipnet-2.11.0 \
+		iri-string-0.7.8 \
+		is_terminal_polyfill-1.70.2 \
+		itoa-1.0.15 \
+		jetscii-0.5.3 \
+		jiff-0.2.15 \
+		jiff-static-0.2.15 \
+		jiff-tzdb-0.1.4 \
+		jiff-tzdb-platform-0.1.3 \
+		js-sys-0.3.81 \
+		kstring-2.0.2 \
+		lazy_static-1.5.0 \
+		libc-0.2.177 \
+		libredox-0.1.10 \
+		libz-rs-sys-0.5.2 \
+		libz-sys-1.1.22 \
+		linux-raw-sys-0.11.0 \
+		litemap-0.8.0 \
+		lock_api-0.4.14 \
+		log-0.4.28 \
+		lru-slab-0.1.2 \
+		matchers-0.2.0 \
+		maybe-async-0.2.10 \
+		memchr-2.7.6 \
+		memmap2-0.9.9 \
 		mime-0.3.17 \
-		minimal-lexical-0.2.1 \
-		miniz_oxide-0.6.2 \
-		miniz_oxide-0.7.1 \
-		mio-0.8.9 \
-		native-tls-0.2.11 \
+		miniz_oxide-0.8.9 \
+		mio-1.1.0 \
 		never-0.1.0 \
-		nom-7.1.3 \
-		nu-ansi-term-0.46.0 \
-		num_cpus-1.16.0 \
-		num_threads-0.1.6 \
-		num-traits-0.2.17 \
-		object-0.32.1 \
-		once_cell-1.18.0 \
-		openssl-0.10.57 \
-		openssl-macros-0.1.1 \
-		openssl-probe-0.1.5 \
-		openssl-sys-0.9.93 \
-		os_str_bytes-6.6.1 \
-		overload-0.1.1 \
-		owo-colors-3.5.0 \
-		parking_lot_core-0.9.9 \
-		parking_lot-0.12.1 \
-		pathdiff-0.2.1 \
-		percent-encoding-2.1.0 \
-		percent-encoding-2.3.0 \
-		petgraph-0.6.0 \
-		petgraph-0.6.4 \
-		pin-project-lite-0.2.13 \
+		nu-ansi-term-0.50.3 \
+		num-conv-0.1.0 \
+		num-traits-0.2.19 \
+		object-0.37.3 \
+		once_cell-1.21.3 \
+		once_cell_polyfill-1.70.2 \
+		openssl-probe-0.1.6 \
+		openssl-sys-0.9.110 \
+		owo-colors-4.2.3 \
+		parking_lot-0.12.5 \
+		parking_lot_core-0.9.12 \
+		percent-encoding-2.3.2 \
+		petgraph-0.8.3 \
+		pin-project-lite-0.2.16 \
 		pin-utils-0.1.0 \
-		pkg-config-0.3.27 \
+		pkg-config-0.3.32 \
+		portable-atomic-1.11.1 \
+		portable-atomic-util-0.2.4 \
+		potential_utf-0.1.3 \
 		powerfmt-0.2.0 \
-		proc-macro-error-1.0.4 \
-		proc-macro-error-attr-1.0.4 \
-		proc-macro2-1.0.37 \
-		proc-macro2-1.0.69 \
-		prodash-26.2.2 \
-		quick-xml-0.30.0 \
-		quote-1.0.18 \
-		quote-1.0.33 \
-		rayon-1.8.0 \
-		rayon-core-1.12.0 \
-		redox_syscall-0.2.16 \
-		redox_syscall-0.3.5 \
-		redox_syscall-0.4.1 \
-		redox_users-0.4.3 \
-		regex-1.10.2 \
-		regex-automata-0.1.10 \
-		regex-automata-0.4.3 \
-		regex-syntax-0.6.29 \
-		regex-syntax-0.8.2 \
-		reqwest-0.11.22 \
-		ring-0.17.5 \
-		rust-embed-6.8.1 \
-		rust-embed-impl-6.8.1 \
-		rust-embed-utils-7.8.1 \
-		rustc-demangle-0.1.23 \
-		rustc-hash-1.1.0 \
-		rustix-0.37.26 \
-		rustix-0.38.20 \
-		rustls-0.21.8 \
-		rustls-native-certs-0.6.3 \
-		rustls-pemfile-1.0.3 \
-		rustls-webpki-0.101.7 \
-		rustsec-example-crate-0.0.1 \
-		ryu-1.0.15 \
+		ppv-lite86-0.2.21 \
+		proc-macro2-1.0.103 \
+		prodash-30.0.1 \
+		quick-xml-0.37.5 \
+		quinn-0.11.9 \
+		quinn-proto-0.11.13 \
+		quinn-udp-0.5.14 \
+		quote-1.0.41 \
+		r-efi-5.3.0 \
+		rand-0.9.2 \
+		rand_chacha-0.9.0 \
+		rand_core-0.9.3 \
+		rayon-1.11.0 \
+		rayon-core-1.13.0 \
+		redox_syscall-0.5.18 \
+		regex-1.12.2 \
+		regex-automata-0.4.13 \
+		regex-syntax-0.8.8 \
+		reqwest-0.12.24 \
+		ring-0.17.14 \
+		rust-embed-8.8.0 \
+		rust-embed-impl-8.8.0 \
+		rust-embed-utils-8.8.0 \
+		rustc-demangle-0.1.26 \
+		rustc-hash-2.1.1 \
+		rustc-stable-hash-0.1.2 \
+		rustix-1.1.2 \
+		rustls-0.23.34 \
+		rustls-native-certs-0.8.2 \
+		rustls-pki-types-1.12.0 \
+		rustls-webpki-0.103.7 \
+		rustversion-1.0.22 \
+		ryu-1.0.20 \
 		same-file-1.0.6 \
-		schannel-0.1.22 \
+		schannel-0.1.28 \
 		scopeguard-1.2.0 \
-		sct-0.7.1 \
-		secrecy-0.8.0 \
-		security-framework-2.9.2 \
-		security-framework-sys-2.9.1 \
-		semver-1.0.20 \
-		semver-1.0.7 \
-		serde_derive-1.0.136 \
-		serde_derive-1.0.190 \
-		serde_json-1.0.107 \
-		serde_spanned-0.6.4 \
+		secrecy-0.10.3 \
+		security-framework-3.5.1 \
+		security-framework-sys-2.15.0 \
+		semver-1.0.27 \
+		serde-1.0.228 \
+		serde_core-1.0.228 \
+		serde_derive-1.0.228 \
+		serde_json-1.0.145 \
+		serde_spanned-0.6.9 \
+		serde_spanned-1.0.3 \
 		serde_urlencoded-0.7.1 \
-		serde-1.0.136 \
-		serde-1.0.190 \
-		sha1_smol-1.0.0 \
-		sha2-0.10.8 \
+		sha1-0.10.6 \
+		sha1-checked-0.10.0 \
+		sha2-0.10.9 \
 		sharded-slab-0.1.7 \
-		slab-0.4.9 \
-		slug-0.1.4 \
-		smallvec-1.11.1 \
-		smol_str-0.2.0 \
-		socket2-0.4.10 \
-		socket2-0.5.5 \
-		socks-0.3.4 \
-		spin-0.9.8 \
+		shell-words-1.1.0 \
+		shlex-1.3.0 \
+		simd-adler32-0.3.7 \
+		slab-0.4.11 \
+		smallvec-1.15.1 \
+		smol_str-0.3.2 \
+		socket2-0.6.1 \
+		stable_deref_trait-1.2.1 \
 		static_assertions-1.1.0 \
-		strsim-0.10.0 \
-		subprocess-0.2.9 \
+		strsim-0.11.1 \
+		subtle-2.6.1 \
 		syn-1.0.109 \
-		syn-1.0.91 \
-		syn-2.0.38 \
+		syn-2.0.108 \
+		sync_wrapper-1.0.2 \
 		synstructure-0.12.6 \
-		system-configuration-0.5.1 \
-		system-configuration-sys-0.5.0 \
-		tame-index-0.7.2 \
-		tempfile-3.8.0 \
-		termcolor-1.3.0 \
-		terminal_size-0.2.6 \
-		textwrap-0.16.0 \
-		thiserror-1.0.50 \
-		thiserror-impl-1.0.50 \
-		thread_local-1.1.7 \
-		time-0.3.30 \
-		time-core-0.1.2 \
-		time-macros-0.2.15 \
-		tinyvec_macros-0.1.0 \
+		synstructure-0.13.2 \
+		system-configuration-0.6.1 \
+		system-configuration-sys-0.6.0 \
+		tame-index-0.24.1 \
+		tempfile-3.23.0 \
+		termcolor-1.4.1 \
+		thiserror-2.0.17 \
+		thiserror-impl-2.0.17 \
+		thread_local-1.1.9 \
+		time-0.3.44 \
+		time-core-0.1.6 \
+		time-macros-0.2.24 \
+		tinystr-0.8.1 \
+		tinyvec-1.10.0 \
 		tinyvec_macros-0.1.1 \
-		tinyvec-1.5.1 \
-		tinyvec-1.6.0 \
-		tokio-1.33.0 \
-		tokio-rustls-0.24.1 \
-		tokio-util-0.7.10 \
-		toml_datetime-0.6.5 \
-		toml_edit-0.13.4 \
-		toml_edit-0.19.15 \
-		toml_edit-0.20.4 \
-		toml-0.5.11 \
-		toml-0.5.9 \
-		toml-0.7.8 \
-		toml-0.8.4 \
+		tokio-1.48.0 \
+		tokio-rustls-0.26.4 \
+		tokio-util-0.7.16 \
+		toml-0.8.23 \
+		toml-0.9.8 \
+		toml-span-0.6.0 \
+		toml_datetime-0.6.11 \
+		toml_datetime-0.7.3 \
+		toml_edit-0.22.27 \
+		toml_edit-0.23.7 \
+		toml_parser-1.0.4 \
+		toml_write-0.1.2 \
+		toml_writer-1.0.4 \
 		topological-sort-0.2.2 \
-		tower-service-0.3.2 \
-		tracing-0.1.40 \
-		tracing-attributes-0.1.27 \
-		tracing-core-0.1.32 \
-		tracing-log-0.1.4 \
-		tracing-subscriber-0.3.17 \
-		try-lock-0.2.4 \
-		twox-hash-1.6.3 \
+		tower-0.5.2 \
+		tower-http-0.6.6 \
+		tower-layer-0.3.3 \
+		tower-service-0.3.3 \
+		tracing-0.1.41 \
+		tracing-attributes-0.1.30 \
+		tracing-core-0.1.34 \
+		tracing-log-0.2.0 \
+		tracing-subscriber-0.3.20 \
+		try-lock-0.2.5 \
+		twox-hash-2.1.2 \
 		typed-arena-2.0.2 \
-		typenum-1.17.0 \
-		uluru-3.0.0 \
-		unicase-2.7.0 \
+		typenum-1.19.0 \
+		uluru-3.1.0 \
+		unicode-bom-2.0.3 \
+		unicode-ident-1.0.20 \
+		unicode-normalization-0.1.24 \
+		unicode-xid-0.2.6 \
 		unicode_categories-0.1.1 \
-		unicode-bidi-0.3.13 \
-		unicode-bidi-0.3.7 \
-		unicode-bom-2.0.2 \
-		unicode-ident-1.0.12 \
-		unicode-normalization-0.1.19 \
-		unicode-normalization-0.1.22 \
-		unicode-xid-0.2.2 \
-		unicode-xid-0.2.4 \
 		untrusted-0.9.0 \
-		ureq-2.8.0 \
-		url-2.2.2 \
-		url-2.4.1 \
-		valuable-0.1.0 \
+		url-2.5.7 \
+		utf8_iter-1.0.4 \
+		utf8parse-0.2.2 \
+		valuable-0.1.1 \
 		vcpkg-0.2.15 \
-		version_check-0.9.4 \
-		wait-timeout-0.2.0 \
-		walkdir-2.4.0 \
+		version_check-0.9.5 \
+		wait-timeout-0.2.1 \
+		walkdir-2.5.0 \
 		want-0.3.1 \
-		wasi-0.11.0+wasi-snapshot-preview1 \
-		wasm-bindgen-0.2.87 \
-		wasm-bindgen-backend-0.2.87 \
-		wasm-bindgen-futures-0.4.37 \
-		wasm-bindgen-macro-0.2.87 \
-		wasm-bindgen-macro-support-0.2.87 \
-		wasm-bindgen-shared-0.2.87 \
-		web-sys-0.3.64 \
-		webpki-roots-0.25.2 \
+		wasi-0.11.1+wasi-snapshot-preview1 \
+		wasip2-1.0.1+wasi-0.2.4 \
+		wasm-bindgen-0.2.104 \
+		wasm-bindgen-backend-0.2.104 \
+		wasm-bindgen-futures-0.4.54 \
+		wasm-bindgen-macro-0.2.104 \
+		wasm-bindgen-macro-support-0.2.104 \
+		wasm-bindgen-shared-0.2.104 \
+		wasmparser-0.207.0 \
+		web-sys-0.3.81 \
+		web-time-1.1.0 \
 		winapi-0.3.9 \
 		winapi-i686-pc-windows-gnu-0.4.0 \
-		winapi-util-0.1.6 \
+		winapi-util-0.1.11 \
 		winapi-x86_64-pc-windows-gnu-0.4.0 \
-		windows_aarch64_gnullvm-0.48.5 \
-		windows_aarch64_msvc-0.48.5 \
-		windows_i686_gnu-0.48.5 \
-		windows_i686_msvc-0.48.5 \
-		windows_x86_64_gnu-0.48.5 \
-		windows_x86_64_gnullvm-0.48.5 \
-		windows_x86_64_msvc-0.48.5 \
-		windows-0.48.0 \
-		windows-core-0.51.1 \
-		windows-sys-0.48.0 \
-		windows-targets-0.48.5 \
-		winnow-0.5.17 \
-		winreg-0.50.0 \
-		xml-rs-0.8.19 \
-		zeroize-1.6.0
+		windows-core-0.62.2 \
+		windows-implement-0.60.2 \
+		windows-interface-0.59.3 \
+		windows-link-0.1.3 \
+		windows-link-0.2.1 \
+		windows-registry-0.5.3 \
+		windows-result-0.3.4 \
+		windows-result-0.4.1 \
+		windows-strings-0.4.2 \
+		windows-strings-0.5.1 \
+		windows-sys-0.52.0 \
+		windows-sys-0.59.0 \
+		windows-sys-0.60.2 \
+		windows-sys-0.61.2 \
+		windows-targets-0.52.6 \
+		windows-targets-0.53.5 \
+		windows_aarch64_gnullvm-0.52.6 \
+		windows_aarch64_gnullvm-0.53.1 \
+		windows_aarch64_msvc-0.52.6 \
+		windows_aarch64_msvc-0.53.1 \
+		windows_i686_gnu-0.52.6 \
+		windows_i686_gnu-0.53.1 \
+		windows_i686_gnullvm-0.52.6 \
+		windows_i686_gnullvm-0.53.1 \
+		windows_i686_msvc-0.52.6 \
+		windows_i686_msvc-0.53.1 \
+		windows_x86_64_gnu-0.52.6 \
+		windows_x86_64_gnu-0.53.1 \
+		windows_x86_64_gnullvm-0.52.6 \
+		windows_x86_64_gnullvm-0.53.1 \
+		windows_x86_64_msvc-0.52.6 \
+		windows_x86_64_msvc-0.53.1 \
+		winnow-0.7.13 \
+		wit-bindgen-0.46.0 \
+		writeable-0.6.1 \
+		xml-1.1.0 \
+		yoke-0.8.0 \
+		yoke-derive-0.8.0 \
+		zerocopy-0.8.27 \
+		zerocopy-derive-0.8.27 \
+		zerofrom-0.1.6 \
+		zerofrom-derive-0.1.6 \
+		zeroize-1.8.2 \
+		zerotrie-0.2.2 \
+		zerovec-0.11.4 \
+		zerovec-derive-0.11.1 \
+		zlib-rs-0.5.2
