--- a/devel/linux-rl9-lld/Makefile
+++ b/devel/linux-rl9-lld/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	lld
-PORTVERSION=	18.1.8
-DISTVERSIONSUFFIX=	-1.el9
+PORTVERSION=	20.1.8
+DISTVERSIONSUFFIX=	-3.el9
 CATEGORIES=	devel linux
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -8,6 +8,8 @@ COMMENT=	The LLVM Linker for LLVM suite (Rocky Linux ${LINUX_DIST_VER})
 WWW=		http://llvm.org
 
 LICENSE=	gpl2+
+
+SKIP_FAKE_CHECK=        (.*sdpscanner|.*\.(so|20.1)$)
 
 USES=		cpe linux:rl9
 USE_LDCONFIG=	yes
@@ -18,7 +20,11 @@ WANT_LINUX32=yes
 BIN_DISTNAMES=	${PORTNAME}-${DISTVERSIONFULL}
 LIB_DISTNAMES=	${PORTNAME}-devel-${DISTVERSIONFULL} \
 		${PORTNAME}-libs-${DISTVERSIONFULL}
+# src rpm is missing
+SRC_DISTFILES=
 
 DOCSDIR=	${PREFIX}/usr/share/doc/${PORTNAME}${PKGNAMESUFFIX}-${PORTVERSION}
+
+PLIST_SUB=	LIBVERSION=${PORTVERSION:R} BINVERSION=${PORTVERSION:R:R}
 
 .include <bsd.port.mk>
